--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^5.1.3",
+    "@tailwindcss/typography": "^0.5.2",
     "nuxt": "3.0.0-rc.4"
   }
 }
