--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ node_modules
 .output
 .env
 dist
+
+# environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
