--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "up-interactive": "pnpm up -i",
+    "up-latest": "pnpm up-interactive -L"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "@tailwindcss/typography": "^0.5.7",
-    "nuxt": "^3.0.0-rc.9"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "nuxt": "^3.12.2"
+  },
+  "packageManager": "pnpm@9.1.4",
+  "engines": {
+    "node": ">=20.10.x",
+    "pnpm": ">=9"
   }
 }
